# fakenet

./: Cargo.toml
acceptance/: Dockerfile  Pipfile  conftest.py  docker-inner.sh  rfc2464_ether_ipv6.py  rfc4291_addr_arch.py  run-in-docker.sh  test_rfc4862_slaac.py
examples/: single-node.toml
src/: delay_queue.rs  main.rs  protocols.rs  reactor.rs  status.rs  tap_device.rs
src/protocols/: arp.rs  encdec.rs  ether.rs  ipv4.rs  mod.rs  udp.rs  utils.rs
src/protocols/ipv6/: address.rs  icmpv6.rs  mod.rs  packet.rs
