[package]
name = "fakenet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
byteorder = "1.4.3"
crossbeam = "0.8.1"
crossbeam-queue = "0.3.2"
libc = "0.2.97"
nix = "0.21.0"
nom = "6.1.2"
ouroboros = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"

[dev-dependencies]
hex = "0.4.3"
